--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
+    <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
@@ -15,6 +17,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Madproject"
         tools:targetApi="31">
+
+        <!-- Splash Activity -->
         <activity
             android:name=".ui.landing.SplashActivity"
             android:exported="true"
@@ -25,42 +29,47 @@
             </intent-filter>
         </activity>
 
+        <!-- Main Activity -->
         <activity
-            android:name=".ui.orderhistory.OrderHistory"
-            android:exported="false"
-            android:label="Order History" />
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name" />
 
+        <!-- AddToCart Activity -->
         <activity
             android:name=".ui.ordercart.AddToCart"
             android:exported="false"
             android:label="Add to Cart" />
 
+        <!-- OrderHistory Activity -->
+        <activity
+            android:name=".ui.orderhistory.OrderHistory"
+            android:exported="false"
+            android:label="Order History" />
+
+        <!-- FoodDrink_Detail Activity -->
         <activity
             android:name=".ui.home.FoodDrink_Detail"
             android:exported="false"
             android:label="Food/Drink Details" />
 
+        <!-- Landing Activity -->
         <activity
             android:name=".ui.landing.LandingActivity"
             android:exported="false"
-            android:theme="@style/Theme.MadProject.Splash"/>
+            android:theme="@style/Theme.MadProject.Splash" />
 
+        <!-- Login Activity -->
         <activity
             android:name=".ui.authentication.LoginActivity"
             android:exported="false"
-            android:theme="@style/Theme.MadProject.Splash"/>
+            android:theme="@style/Theme.MadProject.Splash" />
 
+        <!-- Register Activity -->
         <activity
             android:name=".ui.authentication.RegisterActivity"
             android:exported="false"
-            android:theme="@style/Theme.MadProject.Splash"/>
+            android:theme="@style/Theme.MadProject.Splash" />
 
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name">
-
-        </activity>
     </application>
-
 </manifest>
